tmux.conf: Upgrade path from <= 1.8 to >= 1.9
tmux >= 1.9 only has two relevant mouse settings, so a separate config
file is needed to ensure that systems with different versions function
identically.

--- a/tmux.conf.1.8
+++ b/tmux.conf.1.8
@@ -1,5 +1,8 @@
-set -g mouse on
-set -g mouse-utf8 on
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+set -g mouse-utf8
 setw -g monitor-activity on
 set -g visual-activity on
 set -g status-justify centre
@@ -7,9 +10,6 @@ set -g history-limit 10000
 set -g utf8 on
 set -g status-utf8 on
 set -g bell-action any
-
-bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
-bind -n WheelDownPane select-pane -t= \;                 send-keys -M
 
 bind C-p previous-window
 bind C-n next-window
