--- a/tmux.conf.1.8
+++ b/tmux.conf.1.8
@@ -1,8 +1,4 @@
-# set -g mode-mouse on
-# set -g mouse-resize-pane on
-# set -g mouse-select-pane on
-# set -g mouse-select-window on
-# set -g mouse-utf8
+set -g default-command "${SHELL}"
 setw -g monitor-activity on
 set -g visual-activity on
 set -g status-justify centre
